# daily-fact-bot

./: .env.devnet.example  Anchor.toml  package-lock.json  package.json  txtx.yml
migrations/: deploy.ts
programs/daily_fact_bot/: Cargo.toml
programs/daily_fact_bot/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/daily_fact_bot/src/instructions/: initialize.rs  receive_fact.rs  request_fact.rs  schedule.rs
programs/daily_fact_bot/tests/: test_initialize.rs
runbooks/: README.md
runbooks/deployment/: main.tx
tests/: daily_fact_bot.devnet.ts  daily_fact_bot.ts
